src/objects/Bundle_Work__c.object
<CustomObject>
    <fields>
        <fullName>Bundle__c</fullName>
        <label>Bundle</label>
        <referenceTo>Bundle__c</referenceTo>
        <relationshipLabel>Bundle Works</relationshipLabel>
        <relationshipName>Bundle_Works</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Time_Spent_in_Days__c</fullName>
        <label>Time Spent (in Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>TR1__Timesheet__c</referenceTo>
        <relationshipLabel>Bundle Works</relationshipLabel>
        <relationshipName>Bundle_Works</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Bundle Work</label>
    <nameField>
        <displayFormat>BW-{0000000}</displayFormat>
        <label>Bundle Work Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Works</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>